# orchestra

./: .gitignore  DESIGN.md  ROADMAP.md  design-revision-agno-review.md  pyproject.toml  research-prompt-for-claude-code.md
.github/workflows/: ci.yml
agents/: challenger.md  critic.md  forge.md  herald.md  maestro.md  oracle.md  sage.md  sentinel.md  weaver.md
poc/: g0a_workflow_primitives.py  g0b_hitl_pause_resume.py  g0c_session_state.py  g0d_team_modes.py
research/: 01_architecture_analysis.md  02_multi_model_integration.md  03_observability_analysis.md  04_workflow_patterns.md  05_integration_feasibility.md  final_research_report.md
src/orchestra/: __init__.py  __main__.py  cli.py  model_resolver.py
src/orchestra/agents/: __init__.py  definitions.py  factory.py
src/orchestra/api/: __init__.py  decision_gates.py
src/orchestra/learning/: __init__.py  knowledge.py  stage1.py
src/orchestra/models/: __init__.py  decision_gate.py  task.py  work_unit.py
src/orchestra/persistence/: schemas.py  (+3 more)
tests/: test_agent_definitions.py  test_callable_factory.py  test_cli.py  test_dag.py  test_decision_gate.py  test_decomposition.py  test_design_review.py  test_design_team.py  test_final_integration_review.py  test_four_phase_loop.py  test_gates.py  test_logger.py  test_model_resolver.py  test_persistence.py  test_plan_review.py  test_quality_gates.py  test_sanitizer.py  test_session.py  test_task.py  test_team.py  test_tools.py  test_work_unit.py  test_workflow.py
tests/learning/: test_knowledge.py  test_stage1.py
tests/watchdog/: test_activity.py  test_daemon.py
(+23 files in other folders)
