[project]
name = "orchestra"
version = "0.1.0-alpha"
description = "Multi-agent development orchestration system"
requires-python = ">=3.14"
dependencies = [
    "agno>=2.5.14,<3",
    "fastapi>=0.100",
    "sqlalchemy>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[project.scripts]
orchestra = "orchestra.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
